Kubernetes_Atividade/primeiro-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-declarativo
spec:
  containers:
   - name: nginx
     image: nginx:stable
     resources:
       limits:
        cpu: "1"
        memory: "400Mi"
