Kubernetes_Atividade/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations: 
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: myingress
spec:
  rules:
    - http:
       paths: 
         - path: /nginx
           pathType: Prefix
           backend:
             service:
               name: primeiro-pod
               port: 
                 number: 80
         - path: /apache
           pathType: Prefix
           backend:
             service:
               name: segundo-pod
               port: 
                 number: 80
